--- a/poster.tex
+++ b/poster.tex
@@ -237,7 +237,7 @@ MNE for MEG/EEG data processing: What's up?
     \def\PARISTECH{\unskip$^1$}
     \def\MGH{\unskip$^2$}
     \def\UW{\unskip$^3$}
-    \def\JUELICH{\unskip$^4$}
+    \def\NSPIN{\unskip$^4$}
     \def\ILMENAU{\unskip$^5$}
     \def\NYU{\unskip$^6$}
     \def\STIRLING{\unskip$^7$}
@@ -246,13 +246,15 @@ MNE for MEG/EEG data processing: What's up?
     \begin{center}
     % \vspace*{-0.8ex}%
     \mbox{\hspace{-1em}%
-    \name{A. Gramfort\PARISTECH, M. Luessi\MGH, E. Larson\UW, D.A. Engemann\JUELICH}, D. Strohmeier\ILMENAU}
+    \name{A. Gramfort\PARISTECH^{,}\NSPIN, M. Luessi\MGH, E. Larson\UW, D.A.        
+	      Engemann\NSPIN, D. Strohmeier\ILMENAU}}
     \mbox{\hspace{-1em}%
     \name{C. Brodbeck\NYU, R. Goj\STIRLING, M. Jas\AALTO, T. Brooks\NYU, L. Parkkonen\AALTO, M. H\"am\"al\"ainen\MGH}}
 	\vspace{0.05cm}
 	\def\affilbr{\hspace{0.2cm}}
     \parbox{13cm}{\tiny\center
-                 \PARISTECH Telecom ParisTech, CNRS LTCI - CEA/Neurospin \affilbr
+                 \PARISTECH Telecom ParisTech, CNRS LTCI, Paris, France \affilbr
+                 \NSPIN CEA-INSERM Neurospin, Gif-sur-Yvette, France \affilbr
                  \MGH MGH, Harvard Med. School, USA \affilbr
                  \UW U. of Washington, USA\\
                  \JUELICH CNS (INM-3), Juelich Research Center, Germany \affilbr
