add back juelic + delete PDF

--- a/poster.tex
+++ b/poster.tex
@@ -238,16 +238,17 @@ MNE for MEG/EEG data processing: What's up?
     \def\NSPIN{\unskip$^2$}
     \def\MGH{\unskip$^3$}
     \def\UW{\unskip$^4$}
-    \def\ILMENAU{\unskip$^5$}
-    \def\NYU{\unskip$^6$}
-    \def\STIRLING{\unskip$^7$}
-    \def\AALTO{\unskip$^8$}
+    \def\JUELICH{\unskip$^5$}
+    \def\ILMENAU{\unskip$^6$}
+    \def\NYU{\unskip$^7$}
+    \def\STIRLING{\unskip$^8$}
+    \def\AALTO{\unskip$^9$}
 
     \begin{center}
     % \vspace*{-0.8ex}%
     \mbox{\hspace{-1em}%
     \name{A. Gramfort\PARISTECH^{,}\NSPIN, M. Luessi\MGH, E. Larson\UW, D.A.        
-	      Engemann\NSPIN, D. Strohmeier\ILMENAU}}
+	      Engemann\NSPIN^{,}\JUELICH, D. Strohmeier\ILMENAU}}
     \mbox{\hspace{-1em}%
     \name{C. Brodbeck\NYU, R. Goj\STIRLING, M. Jas\AALTO, T. Brooks\NYU, L. Parkkonen\AALTO, M. H\"am\"al\"ainen\MGH}}
 	\vspace{0.05cm}
