--- a/poster.tex
+++ b/poster.tex
@@ -262,7 +262,7 @@ MNE for MEG/EEG data processing: What's up?
                  \JUELICH CNS (INM-3), Juelich Research Center, Germany \affilbr
                  \ILMENAU TU Ilmenau, Germany \affilbr
                  \STIRLING Stirling, UK \affilbr\\
-                 \AALTO AALTO Univ., Finland \affilbr
+                 \AALTO Aalto Univ., Finland \affilbr
                  \NYU New York Univ., USA}
     \end{center}
 }
@@ -330,12 +330,12 @@ MNE for MEG/EEG data processing: What's up?
     \vspace*{-0.6em}%
     \begin{myexampleblock}{Software Features}
         \subsection{Preprocessing}
-        \mydot Review raw data, filter, dampen ECG/EOG with SSPs, ICA\\
+        \mydot Review raw data, filter, dampen ECG/EOG with SSP, ICA\\
         \subsection{Forward \& inverse modeling}
-        \mydot Automatic forward modeling with FreeSurfer\\
+        \mydot Forward modeling with FreeSurfer-generated surfaces\\
         \mydot MNE -- dSPM -- sLORETA -- (TF-)MxNE -- LCMV -- DICS\\
         \subsection{Statistics (sensor and source spaces)}
-        \mydot Time-Frequency (Phase-Locking, Induced Power)\\
+        \mydot Time--Frequency (Phase-Locking, Induced Power)\\
         \mydot Parametric and non-parametric stats, with clustering\\
         \mydot Decoding/MVPA (SVM, ...)\\
         \subsection{Connectivity (sensor and source spaces)}
@@ -349,11 +349,11 @@ MNE for MEG/EEG data processing: What's up?
     \vspace{0.5em}
     \begin{minipage}{\linewidth}
     \subsection{What's new}
-    \mydot TF Beamformers, IO (BDF/EDF, EGI, etc.), field maps, realtime,
+    \mydot TF Beamformers, import of BDF/EDF/EGI formats, field maps, realtime analysis and classification,
     source spaces + forward in Python, decoding/MVPA, GUIs\\
     \mydot http://martinos.org/mne/dev/whats\_new.html
     \begin{center}
-        \includegraphics[width=\linewidth]{figure2.png}%
+        \includegraphics[width=0.95\linewidth]{figure2.png}%
     \end{center}
     \end{minipage}
 \end{minipage}
@@ -373,7 +373,7 @@ MNE for MEG/EEG data processing: What's up?
     \includegraphics[width=0.9\linewidth]{paper_logo.pdf}%
 \end{minipage}
 \begin{minipage}{0.93\linewidth}
-    A. Gramfort, M. Luessi, E. Larson, D. Engemann, D. Strohmeier, C. Brodbeck, L. Parkkonen, M. H\"am\"al\"ainen\hfill
+    A. Gramfort, M. Luessi, E. Larson, D. Engemann, D. Strohmeier, C. Brodbeck, L. Parkkonen, M. H\"am\"al\"ainen\hfill\\
     \emph{MNE software for processing MEG and EEG data}, Neuroimage, 2014
 \end{minipage}\\
 \begin{minipage}{0.05\linewidth}
@@ -481,11 +481,11 @@ MNE for MEG/EEG data processing: What's up?
 % \medskip
 \vspace{1em}%
 \end{minipage}
-\begin{minipage}{\linewidth}
-    \vspace*{-0.5em}%
-    \center
-    Funded by: NIH grants P41RR14075, R01EB009048, F32DC012456 and NSF awards 0958669, 1042134
-\end{minipage}
+% \begin{minipage}{\linewidth}
+%     \vspace*{-0.5em}%
+%     \center
+%     Funded by: NIH grants P41RR14075, R01EB009048, F32DC012456 and NSF awards 0958669, 1042134
+% \end{minipage}
 \smallskip
 ~
 \end{frame}
