--- a/poster.tex
+++ b/poster.tex
@@ -350,7 +350,7 @@ MNE for MEG/EEG data processing: What's up?
     \begin{minipage}{\linewidth}
     \subsection{What's new}
     \mydot TF Beamformers, import of BDF/EDF/EGI formats, field maps, realtime analysis and classification,
-    source spaces + forward in Python, decoding/MVPA, GUIs\\
+    source spaces + forward in Python, decoding/MVPA, GUIs, demo with SPM data\\
     \mydot http://martinos.org/mne/dev/whats\_new.html
     \begin{center}
         \includegraphics[width=0.95\linewidth]{figure2.png}%
