2015: update authors + title

--- a/poster.tex
+++ b/poster.tex
@@ -215,7 +215,7 @@
 \begin{frame}[plain,t,c]
 \postertitle{%
 \smallskip
-MNE for MEG/EEG data processing: What's up?
+Trends in MEG/EEG data processing using MNE
 }
 \vspace*{-0.2em}%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -237,33 +237,41 @@ MNE for MEG/EEG data processing: What's up?
     \small
     \def\PARISTECH{\unskip$^1$}
     \def\NSPIN{\unskip$^2$}
-    \def\MGH{\unskip$^3$}
-    \def\UW{\unskip$^4$}
-    \def\JUELICH{\unskip$^5$}
+    \def\UW{\unskip$^3$}
+    \def\MGH{\unskip$^4$}
+    \def\NYU{\unskip$^5$}
     \def\ILMENAU{\unskip$^6$}
-    \def\NYU{\unskip$^7$}
-    \def\STIRLING{\unskip$^8$}
-    \def\AALTO{\unskip$^9$}
+    \def\STIRLING{\unskip$^7$}
+    \def\LEUVEN{\unskip$^{8}$}
+    \def\UCSF{\unskip$^{9}$}
+    \def\GRAZ{\unskip$^{10}$}
+    \def\AALTO{\unskip$^{11}$}
 
     \begin{center}
     % \vspace*{-0.8ex}%
     \mbox{\hspace{-1em}%
-    \name{A. Gramfort\PARISTECH$^{,}$\NSPIN, M. Luessi\MGH, E. Larson\UW, D.A.        
-	      Engemann\NSPIN$^{,}$\JUELICH, D. Strohmeier\ILMENAU}}
+    \name{A. Gramfort\PARISTECH$^{,}$\NSPIN, D.A. Engemann\NSPIN, E. Larson\UW, M. Luessi\MGH, C. Brodbeck\NYU}}
     \mbox{\hspace{-1em}%
-    \name{C. Brodbeck\NYU, R. Goj\STIRLING, M. Jas\AALTO, T. Brooks\NYU, L. Parkkonen\AALTO, M. H\"am\"al\"ainen\MGH$^,$\AALTO}}
+    \name{M. Jas\PARISTECH, T. Brooks\NYU, D. Strohmeier\ILMENAU, R. Goj\STIRLING, M. van Vliet\LEUVEN, A. Leggitt\UCSF}}
+    \mbox{\hspace{-1em}
+    \name{M. Billinger\GRAZ, H. Bharadwaj\MGH, L. Parkkonen\AALTO, M. H\"am\"al\"ainen\MGH$^,$\AALTO}}
 	\vspace{0.05cm}
 	\def\affilbr{\hspace{0.2cm}}
     \parbox{13cm}{\tiny\center
                  \PARISTECH Telecom ParisTech, CNRS LTCI, Paris, France \affilbr
                  \NSPIN CEA-INSERM Neurospin, Gif-sur-Yvette, France \affilbr\\
+                 \UW Univ. of Washington, USA \affilbr
                  \MGH MGH, Harvard Med. School, USA \affilbr
-                 \UW Univ. of Washington, USA\\
-                 \JUELICH CNS (INM-3), Juelich Research Center, Germany \affilbr
+                 \NYU New York Univ., USA
+\affilbr\\
                  \ILMENAU TU Ilmenau, Germany \affilbr
-                 \STIRLING Stirling, UK \affilbr\\
-                 \AALTO Aalto Univ., Finland \affilbr
-                 \NYU New York Univ., USA}
+                 \STIRLING Stirling, UK \affilbr
+                 \LEUVEN KU Leuven, Belgium \affilbr
+                 \UCSF UC San Francisco, USA
+\affilbr\\
+                \GRAZ TU Graz, Austria \affilbr
+                \AALTO Aalto Univ., Finland \affilbr
+                 }
     \end{center}
 }
 %
