--- a/poster.tex
+++ b/poster.tex
@@ -342,6 +342,7 @@ Trends in MEG/EEG data processing using MNE
         \subsection{Forward \& inverse modeling}
         \mydot Forward modeling with FreeSurfer-generated surfaces\\
         \mydot MNE -- dSPM -- sLORETA -- (TF-)MxNE -- LCMV -- DICS\\
+        %\mydot Dipole fitting -- RAP-MUSIC\\
         \subsection{Statistics (sensor and source spaces)}
         \mydot Time--Frequency (Phase-Locking, Induced Power)\\
         \mydot Parametric and non-parametric stats, with clustering\\
@@ -426,10 +427,10 @@ Trends in MEG/EEG data processing using MNE
             \mydot Python: general-purpose, high-level language \\
             \mydot Free: can run on a cluster without license problems\\
             \mydot Permissive BSD license: allows use in commercial products\\
-            \mydot 46 contributors in last 12 months $\approx$ 13 person-years of effort
+            \mydot 47 contributors in last 12 months $\approx$ 13 person-years of effort
             \begin{center}
                 \vspace{-0.5em}
-                \includegraphics[width=0.8\linewidth]{sloc_june_2014.png}%
+                \includegraphics[width=0.8\linewidth]{sloc_may_2015.png}%
             \end{center}
         \end{myexampleblock}
         \vspace{-0.8em}
