--- a/poster.tex
+++ b/poster.tex
@@ -346,7 +346,7 @@ Trends in MEG/EEG data processing using MNE
         \subsection{Statistics (sensor and source spaces)}
         \mydot Time--Frequency (Phase-Locking, Induced Power)\\
         \mydot Parametric and non-parametric stats, with clustering\\
-        \mydot Decoding/MVPA (SVM, ...)\\
+        \mydot Decoding/MVPA (SVM, ...), CSP, Time decoding\\
         \subsection{Connectivity (sensor and source spaces)}
         \mydot Functional and effective connectivity measures
     \end{myexampleblock}
@@ -358,8 +358,7 @@ Trends in MEG/EEG data processing using MNE
     \vspace{0.5em}
     \begin{minipage}{\linewidth}
     \subsection{What's new}
-    \mydot TF Beamformers, import of BDF/EDF/EGI formats, field maps, realtime analysis and classification,
-    source spaces + forward in Python, decoding/MVPA, GUIs, demo with SPM data\\
+    \mydot Dipole fitting, RAP-MUSIC algorithm, mixed source space, channel interpolation, automated regularization, and many more\\
     \mydot http://martinos.org/mne/dev/whats\_new.html
     \begin{center}
         \includegraphics[width=0.95\linewidth]{figure2.png}%
@@ -438,7 +437,7 @@ Trends in MEG/EEG data processing using MNE
             \begin{minipage}{1.\linewidth}
                 \mydot Mailing list: mne\_analysis@nmr.mgh.harvard.edu\\
                 \mydot http://martinos.org/mne/ (general doc)\\
-                \mydot http://martinos.org/mne/dev/python\_tutorial.html\\
+                \mydot http://martinos.org/mne/python\_tutorial.html\\
                 \mydot http://mne-tools.github.com/mne-python-intro-slides\\
                 \mydot http://martinos.org/mne/auto\_examples/ (> 70 demos)\\
             \end{minipage}
