update what's new

--- a/poster.tex
+++ b/poster.tex
@@ -358,10 +358,10 @@ Trends in MEG/EEG data processing using MNE
     \vspace{0.5em}
     \begin{minipage}{\linewidth}
     \subsection{What's new}
-    \mydot Dipole fitting, RAP-MUSIC algorithm, mixed source space, channel interpolation, automated regularization, and many more\\
+    \mydot Dipole fitting, RAP-MUSIC, bad EEG/MEG channel interpolation, automated covariance regularization, multi-taper time-frequency, deep structures source spaces, basic ECOG support\\
     \mydot http://martinos.org/mne/dev/whats\_new.html
     \begin{center}
-        \includegraphics[width=0.95\linewidth]{figure2.png}%
+        \includegraphics[width=0.85\linewidth]{figure2.png}%
     \end{center}
     \end{minipage}
 \end{minipage}
