WIP for hbm 2016

--- a/poster.tex
+++ b/poster.tex
@@ -435,7 +435,7 @@ News from the trenches
             \mydot 47 contributors in last 12 months $\approx$ 13 person-years of effort
             \begin{center}
                 \vspace{-0.5em}
-                \includegraphics[width=0.8\linewidth]{sloc_may_2015.png}%
+                \includegraphics[width=0.9\linewidth]{sloc_june_2016.png}%
             \end{center}
         \end{myexampleblock}
         \vspace{-0.8em}
@@ -473,13 +473,14 @@ News from the trenches
 \begin{minipage}{1.09\linewidth}
 
 \hspace{-0.1em}%
+\begin{minipage}{.25\linewidth}
+    \includegraphics[width=\linewidth]{img/joint_plot.png}
+    %dspm_volumetric_cropped.png
+\end{minipage}%
 \begin{minipage}{.225\linewidth}
     \includegraphics[width=0.8\linewidth]{mixed_source_space.png}%
 \end{minipage}%
 \hspace{-2.0em}%
-\begin{minipage}{.25\linewidth}
-    \includegraphics[width=\linewidth]{dspm_volumetric_cropped.png}
-\end{minipage}%
 \hspace{-.4em}%
 %\begin{minipage}{.165\linewidth}
 %    \includegraphics[width=\linewidth]{volume_tc.png}%
