--- a/poster.tex
+++ b/poster.tex
@@ -333,8 +333,9 @@ News from the trenches
 
 % \smallskip
 
+\vspace*{-0.5em}%  
 \begin{minipage}[B]{0.47\linewidth}
-    \vspace*{0.5em}%
+    \vspace*{-0.5em}%
     \begin{myalertblock}{The MNE Software Vision}
         \mydot State-of-the-art methods, documented and tested\\
         \mydot Open development: collaboration between several centers\\
@@ -360,13 +361,15 @@ News from the trenches
 \end{minipage}%
 %
 \hfill%
-\begin{minipage}{.5\linewidth}
+\begin{minipage}{.52\linewidth}
     \vspace{0.5em}
     \begin{minipage}{\linewidth}
     \subsection{What's new}
-    \mydot Dipole fitting, RAP-MUSIC, interpolation of bad EEG/MEG channel, automated covariance regularization, multi-taper time-frequency, deep structures in source spaces, basic ECoG support\\
-    \mydot http://martinos.org/mne/dev/whats\_new.html
+    \mydot Maxwell Filter (SSS), dipole fitting, RAP-MUSIC, interpolation of bad EEG/MEG channel, automated covariance regularization, multi-taper time-frequency, deep structures in source spaces, basic ECoG support, segment annotations,
+    interactive viz (TFR \& ERP)\\
+    \mydot \url{http://martinos.org/mne/dev/whats\_new.html}
     \begin{center}
+        \vspace*{-1.em}%
         \includegraphics[width=0.95\linewidth]{mne_report.png}%
     \end{center}
     \end{minipage}
@@ -375,7 +378,7 @@ News from the trenches
 
 \begin{minipage}{\linewidth}
     \smallskip
-    \vspace*{0.8ex}%
+    \vspace*{-0.3ex}%
 \center
 {\huge\bfseries\sffamily http://martinos.org/mne~~~~~~http://github.com/mne-tools}
 \end{minipage}
@@ -435,7 +438,7 @@ News from the trenches
             \mydot 47 contributors in last 12 months $\approx$ 13 person-years of effort
             \begin{center}
                 \vspace{-0.5em}
-                \includegraphics[width=0.9\linewidth]{sloc_june_2016.png}%
+                \includegraphics[width=0.9\linewidth]{sloc_june_2016_v2.png}%
             \end{center}
         \end{myexampleblock}
         \vspace{-0.8em}
@@ -443,9 +446,9 @@ News from the trenches
             \begin{minipage}{1.\linewidth}
                 \mydot Mailing list: mne\_analysis@nmr.mgh.harvard.edu\\
                 \mydot http://martinos.org/mne/ (general doc)\\
-                \mydot http://martinos.org/mne/python\_tutorial.html\\
-                \mydot http://mne-tools.github.com/mne-python-intro-slides\\
-                \mydot http://martinos.org/mne/auto\_examples/ (> 110 demos)\\
+                \mydot http://martinos.org/mne/stable/getting\_started.html\\
+                \mydot http://martinos.org/mne/stable/tutorials.html\\
+                \mydot http://martinos.org/mne/auto\_examples/ (>50 demos)\\
             \end{minipage}
         \end{myalertblock}
     \end{minipage}
@@ -465,7 +468,7 @@ News from the trenches
 
 \vfillll
 
-\vspace*{-2.6em}%
+\vspace*{-2.2em}%
 
 % Bottom banner {{{---
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
