Add epochs plotter

--- a/poster.tex
+++ b/poster.tex
@@ -481,7 +481,7 @@ News from the trenches
     %dspm_volumetric_cropped.png
 \end{minipage}%
 \begin{minipage}{.225\linewidth}
-    \includegraphics[width=0.8\linewidth]{mixed_source_space.png}%
+    \includegraphics[width=0.85\linewidth]{img/epochs_plotter.png}%
 \end{minipage}%
 \hspace{-2.0em}%
 \hspace{-.4em}%
