update title for biomag

--- a/poster.tex
+++ b/poster.tex
@@ -216,7 +216,7 @@
 \postertitle{%
 \smallskip
 % Trends in MEG/EEG data processing using MNE
-MEG and EEG data processing using MNE:\\
+MEG and EEG data processing using MNE-Python:\\
 News from the trenches
 }
 \vspace*{-0.2em}%
